--- a/android/src/main/assets/index.html
+++ b/android/src/main/assets/index.html
@@ -8,11 +8,21 @@
     <script id="MathJax-script" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-chtml.min.js">
     </script>
-    
+
 </head>
 
 <body>
 
+    <div id="demo">
+
+
+        \[\frac{-v+f}{-f}=\frac{-v}{-u} અથવા \frac{v-f}{f}=\frac{v}{u}\]
+
+
+        \[\theta \simeq \theta \]
+
+    </div>
+    
     <div id="content">
 
 
